added flights
